fix spacing on cherry-bloosm

--- a/themes/cherry-bloosm/style.css
+++ b/themes/cherry-bloosm/style.css
@@ -44,7 +44,7 @@ a {
 #userName {
   display: grid;
   color: var(--bgColor);
-  margin: auto;
+  margin: 20px auto;
   text-align: center;
   font-family: var(--font);
   font-size: 20px;
